fix: grant contents: write so workflow can create GitHub releases

--- a/.github/workflows/package-and-publish.yml
+++ b/.github/workflows/package-and-publish.yml
@@ -9,6 +9,9 @@ on:
         type: string
         required: true
 
+permissions:
+  contents: write   # required for softprops/action-gh-release to create releases & upload assets
+
 jobs:
   package:
     runs-on: ubuntu-latest
